# Connect6_Analyze

./: pyproject.toml
connect6_analyze/: analyze.py  analyze_boarder_places.py  analyze_game_length.py  analyze_piece_placed.py  yaml_to_jsons.py
tests/: test_connect6_analyze.py
